--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,26 @@
-body{
-    margin:0;
+body {
+    margin: 0;
     padding: 0;
     border: 0;
+    width: 98.78vw;
     font-family: 'Nunito', sans-serif;
+    background-color: #262628;
 }
 
-.divWelcome{
+.divWelcome {
     display: grid;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: #262628;
-    grid-template-columns: repeat(2,1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 70vh 1fr;
     grid-template-areas: "head head"
-                         "slogan musician"
-                         "more more";
+        "slogan musician"
+        "more more";
 
 }
 
-header{
+header {
     grid-area: head;
 }
 
@@ -28,24 +30,29 @@ header nav {
     justify-content: space-between;
     align-items: center;
 }
-.divLogo{
+
+.divLogo {
     display: flex;
     align-items: center;
 }
-.divLogo img{
+
+.divLogo img {
     width: 35%;
     margin-left: 15%;
 }
-.navigation{
+
+.navigation {
     width: 53%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .navigation ul {
     display: flex;
     gap: 3%;
 }
+
 .navigation ul a {
     text-decoration: none;
     list-style: none;
@@ -57,58 +64,63 @@ header nav {
 
 .navigation ul a:hover {
     color: white;
-    border-bottom: 1px #5c582a  solid;
+    border-bottom: 1px #5c582a solid;
 }
+
 .navigation .activeLi {
     color: white;
 }
-.navigation  button {
+
+.navigation button {
     text-decoration: none;
     margin-right: 7%;
     padding: 1% 4%;
     border-radius: 7px;
     font-size: 1.15rem;
-    background-color:#736F45;
+    background-color: #736F45;
     border: none;
     color: white;
     transition: 200ms;
     cursor: pointer;
 }
-.navigation  button a{
+
+.navigation button a {
     text-decoration: none;
     color: white;
 }
-.navigation button:hover{
+
+.navigation button:hover {
     background-color: #908835;
-    transform: translate(0,-4%);
+    transform: translate(0, -4%);
 }
 
-.contentSlogan{
-    grid-area:slogan;
+.contentSlogan {
+    grid-area: slogan;
     margin-left: 20%;
     margin-bottom: 5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
 }
-.contentSlogan h1{
+
+.contentSlogan h1 {
     font-size: 3rem;
     color: white;
     margin: 0;
 }
-.contentSlogan p{
+
+.contentSlogan p {
     font-size: 1.3rem;
     color: #A9A5A6;
 }
-.contentSlogan h3{
+
+.contentSlogan h3 {
     font-size: 1.7rem;
-    color:#908F81 ;
+    color: #908F81;
     font-weight: 600;
 }
-.buttons{
-}
 
-.btnGradient{
+.btnGradient {
     width: 25%;
     padding: 3% 0;
     font-size: 1.1rem;
@@ -119,7 +131,8 @@ header nav {
     border: none;
     cursor: pointer;
 }
-.btnSimulador{
+
+.btnSimulador {
     width: 25%;
     padding: 3% 0;
     margin-left: 5%;
@@ -129,29 +142,31 @@ header nav {
     background-color: transparent;
     border: none;
 }
-.divImgMusician{
-    grid-area:musician;
+
+.divImgMusician {
+    grid-area: musician;
     display: flex;
     justify-content: center;
     align-items: center;
-   
+
 }
 
-.divImgMusician img{
+.divImgMusician img {
     width: 65%;
     margin-bottom: 10%;
     margin-right: 10%;
 }
 
-.divMore{
-    grid-area:more;
+.divMore {
+    grid-area: more;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin-bottom: 1%;
 }
-.divMore img:nth-child(1){
+
+.divMore img:nth-child(1) {
     width: 1.5%;
     animation-duration: 3s;
     animation-name: more2;
@@ -159,15 +174,40 @@ header nav {
 }
 
 @keyframes more2 {
-    0%,100%{
-		transform:translatey(5px)
-	}
-	50%{
-		transform:translatey(-5px)
-	}
+
+    0%,
+    100% {
+        transform: translatey(5px)
+    }
+
+    50% {
+        transform: translatey(-5px)
+    }
 }
-  
 
-  
-  
+.benefits {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
 
+.benefits h1 {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 2.5rem;
+    margin-top: 3%;
+    margin-bottom: 5%;
+    background: -webkit-linear-gradient(#eee, #9a752c);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.divCardsBenefits{
+    width: 100%;
+    height: 50%;
+    background-color: red;
+}
