--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,17 @@ body {
     background-color: #262628;
 }
 
+body::-webkit-scrollbar {
+    width: 12px;       
+  }
+  
+
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #1c1c1d;
+    border-radius: 20px;     
+  }
+
 .divWelcome {
     display: grid;
     width: 100%;
@@ -207,7 +218,128 @@ header nav {
 }
 
 .divCardsBenefits{
+    display: flex;
+    justify-content: center;
+    gap: 5%;
     width: 100%;
     height: 50%;
-    background-color: red;
+    align-items: center;
+}
+
+.cardBenefits{
+    position: relative;
+    display: flex;
+    justify-content:space-around;
+    align-items: center;
+    flex-direction: column;
+    width: 20%;
+    height: 70%;
+    padding: 0 2%;
+    background: rgba(83, 75, 59, 0.48);
+    box-shadow: 0px 4px 4px rgba(143, 133, 36, 0.42);
+    border-radius: 8px;
+}
+
+.cardBenefits h2,.cardBenefits p{
+    color: white;
+    text-align: center;
+}
+
+.cardBenefits p{
+    height: 30%;
+    overflow: hidden;
+}
+
+.cardImgBenefits {
+    position: absolute;
+    width: 30%;
+    top: -35%;
+    left: -10%;
+}
+
+.cardImgBenefitsFirst{
+    width: 35%;
+    top: -35%;
+    left: -10%;
+}
+
+.cardBenefits .imgMore{
+    cursor: pointer;
+    margin-bottom: 3%;
+    transition: 500ms;
+}
+
+.cardBenefits .imgMore:hover{
+    transform:translate(0,20%);
+    filter: blur(1px) grayscale(100%);
+}
+
+.learnMusics{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+.learnMusics h1{
+    color: white;
+    font-weight: 600;
+    font-size: 2.5rem;
+    margin-bottom: 5%;
+}
+
+.divGridMusics{
+    display: grid;
+    grid-template-rows: repeat(2,1fr);
+    grid-template-columns: repeat(6,1fr);
+    grid-template-areas:"homeMusic homeMusic jeteMusic jeteMusic houseMusic houseMusic"
+                        "homeMusic homeMusic nothingMusic theLastMusic theLastMusic theLastMusic " ;
+    width: 98%;
+    height: 65%;
+
+    row-gap: 1.7%;
+    column-gap:0.7%;
+
+}
+
+
+.div1{
+    grid-area: homeMusic;
+    overflow: hidden;
+    width: 100%;
+}
+
+.div1 img{
+    width: 100%;
+    height: 65%;
+}
+.div2{
+    grid-area:jeteMusic ;
+    overflow: hidden;
+}
+.div2 img{
+    width: 100%;
+    height: 100%;
+}
+.div3{
+    grid-area: houseMusic;
+}
+.div3 img{
+    width: 100%;
+    height: 100%;
+}
+.div4{
+    grid-area: nothingMusic;
+}
+.div4 img{
+    width: 100%;
+    height: 41%;
+}
+.div5{
+    grid-area: theLastMusic;
+}
+.div5 img{
+    width: 100%;
+    height: 80%;
 }
