--- a/styles/styleSignUp.css
+++ b/styles/styleSignUp.css
@@ -17,19 +17,19 @@ body::-webkit-scrollbar-thumb {
     border-radius: 20px;
 }
 
-.divContentSignUp{
+.divContentSignUp {
     display: flex;
     width: 100%;
     height: 100vh;
 }
 
-.divSelectYourInstrument{
+.divSelectYourInstrument {
     height: 100%;
     width: 100%;
     background-color: #936161;
 }
 
-.divSignUp{
+.divSignUp {
     width: 100%;
     height: 100%;
     display: flex;
@@ -38,17 +38,42 @@ body::-webkit-scrollbar-thumb {
     align-items: center;
 }
 
-.divSignUp h1{
+.divSignUp h1 {}
 
+.divSignUp input {
+    margin-bottom: 3%;
+    font-size: 1rem;
+    color: rgba(11, 70, 84);
+    width: 55%;
+    padding: 2% 2%;
+    border-radius: 10px;
+    border: 2px solid rgba(11, 70, 84, 0.25);
+    outline: transparent;
 }
 
-.divSignUp input{
-    margin-bottom: 5%;
+.divSignUp h3{
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.divSignUp a{
+    color: #736F45;
+    text-decoration: none;
+}
+
+.divSignUp a:hover{
+    text-decoration: underline;
+}
+
+.buttonSignUp {
     font-size: 1.1rem;
-    color:rgba(11, 70, 84) ;
-    width:60%;
-    padding: 2.1% 2%;
-    border-radius: 10px;
-    border: 3px solid rgba(11, 70, 84, 0.25);
-    outline: transparent;
+    color: white;
+    background-color: #736F45;
+    margin-top: 4%;
+    width: 60%;
+    height: 8%;
+    border-radius: 15px;
+    border: none;
+    box-shadow: 0px 2.9566px 2.9566px rgba(0, 0, 0, 0.25), inset 0px 1.4783px 2.9566px rgba(255, 255, 255, 0.25), inset 0px -1.4783px 2.9566px rgba(0, 0, 0, 0.25);
+    border-radius: 11.8264px;
+    margin-bottom: 5%;
 }
