--- a/styles/styleSignUp.css
+++ b/styles/styleSignUp.css
@@ -76,4 +76,20 @@ body::-webkit-scrollbar-thumb {
     box-shadow: 0px 2.9566px 2.9566px rgba(0, 0, 0, 0.25), inset 0px 1.4783px 2.9566px rgba(255, 255, 255, 0.25), inset 0px -1.4783px 2.9566px rgba(0, 0, 0, 0.25);
     border-radius: 11.8264px;
     margin-bottom: 5%;
+    cursor: pointer;
+}
+
+
+.buttonSignUp:hover {
+    font-size: 1.1rem;
+    color: white;
+    background-color: blue;
+    margin-top: 4%;
+    width: 60%;
+    height: 8%;
+    border-radius: 15px;
+    border: none;
+    box-shadow: 0px 2.9566px 2.9566px rgba(0, 0, 0, 0.25), inset 0px 1.4783px 2.9566px rgba(255, 255, 255, 0.25), inset 0px -1.4783px 2.9566px rgba(0, 0, 0, 0.25);
+    border-radius: 11.8264px;
+    margin-bottom: 5%;
 }
