--- a/public/styles/styleSignUp.css
+++ b/public/styles/styleSignUp.css
@@ -23,12 +23,34 @@ body::-webkit-scrollbar-thumb {
     height: 100vh;
 }
 
+.iconBack{
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+.iconBack a img{
+    margin-left: 1%;
+    width: 10%;
+    height: 10%;
+}
+
 .divSelectYourInstrument {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 100%;
     width: 100%;
     background-color: #936161;
 }
-
+.contentYourInstrument{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width:100%;
+    height: 90vh;
+    background-color: red;
+}
 .divSignUp {
     width: 100%;
     height: 100%;
@@ -216,3 +238,5 @@ body::-webkit-scrollbar-thumb {
     border-radius: 11.8264px;
     margin-bottom: 5%;
 }
+
+
