--- a/public/styles/styleSignUp.css
+++ b/public/styles/styleSignUp.css
@@ -30,29 +30,106 @@ body::-webkit-scrollbar-thumb {
     justify-content: flex-start;
 }
 .iconBack a img{
-    margin-left: 1%;
+    margin-left: -10%;
     width: 10%;
     height: 10%;
 }
-
+.textSelectYourInstrument{
+    margin:0;
+    margin-bottom: 1%;
+    margin-top: 2%;
+    font-size: 1.8rem;
+    color: white;
+    font-weight: 300;
+}
 .divSelectYourInstrument {
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
     width: 100%;
-    background-color: #936161;
+    /* Cor a definir */
+    background-color: #59563b;
 }
 .contentYourInstrument{
+    flex-wrap: wrap;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width:100%;
-    height: 90vh;
-    background-color: red;
+    width:98%;
+    height: 49vh;
+    filter: drop-shadow(10px 5px 4px #0e0e0f);
+    flex-direction: column;
+    border-radius: 3px;
+    overflow-x: scroll;
 }
-.divSignUp {
+
+.contentYourInstrument::-webkit-scrollbar {
+    width: 12px;       
+  }
+  
+
+  .contentYourInstrument::-webkit-scrollbar-thumb {
+    background-color: #eeeeee52;
+    border-radius: 20px;     
+  }
+.cardYourInstruments{
+    background-color: rgba(33, 29, 2, 0.229);
+    display: flex;
+    align-items: baseline;
+    width: 20%;
+    height: 39%;
+    padding: 1.5%;
+    /* background-color: blue; */
+    margin:0.5%;
+    border: 1px solid white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.radioYourInstruments{
+    position: relative;
+    margin: 0;
+    left: 90%;
+    top: -2%;
+}
+
+.contentCardYourInstruments{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 100%;
+    height: 100%;
+    margin-right: 10%;
+    /* background-color: green; */
+    
+}
+.nameOfInstruments{
+    display: flex;
+    justify-content: center;
+    width: 70%;
+    height: 20%;
+}
+.nameOfInstruments h3{
+    font-size: 1.2rem;
+    font-weight: 900;
+    margin-top: -4%;
+    color: white;
+}
+.imgOfInstruments{
+    display: flex;
+    width: 100%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
+}
+.imgOfInstruments img{
+    width: 45%;
+}
+
+
+
+
+.divSignUp {
+    width: 80%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -74,16 +151,16 @@ body::-webkit-scrollbar-thumb {
 
 .iconInputsLabel1{
     position: absolute;
-    right: 37%;
-    top: 18%;
+    right: 33%;
+    top: 20.5%;
     margin: 0;
     padding: 0;
 }
 
 .iconInputsLabel2{
     position: absolute;
-    right: 37%;
-    top: 31.3%;
+    right: 33%;
+    top: 32.5%;
     margin: 0;
     padding: 0;
     border: 0;
@@ -91,8 +168,8 @@ body::-webkit-scrollbar-thumb {
 
 .iconInputsLabel3{
     position: absolute;
-    right: 37%;
-    top: 44%;
+    right: 33%;
+    top: 44.5%;
     margin: 0;
     padding: 0;
     border: 0;
@@ -100,8 +177,8 @@ body::-webkit-scrollbar-thumb {
 
 .iconInputsLabel4{
     position: absolute;
-    right: 37%;
-    top: 57.3%;
+    right: 33%;
+    top: 56.5%;
     margin: 0;
     padding: 0;
     border: 0;
@@ -154,7 +231,7 @@ body::-webkit-scrollbar-thumb {
 .msgErrorActive{
     position:fixed;
     font-size: 1.1rem;
-    left: 60.5%;
+    left: 64.5%;
     margin: 0;
     margin-top: 4.7%;
     padding: 0;
@@ -188,7 +265,7 @@ body::-webkit-scrollbar-thumb {
 .msgErrorAcept{
     position:fixed;
     font-size: 1.1rem;
-    left: 60.5%;
+    left: 64.5%;
     margin: 0;
     margin-top: 4.7%;
     padding: 0;
