--- a/public/styles/styleSideBar.css
+++ b/public/styles/styleSideBar.css
@@ -1,6 +1,5 @@
   .sideBar{
-      /* position: fixed; */
-      /* float: left; */
+      position: fixed;
       left: 0;
       top: 0;
       bottom: 0;
