--- a/public/styles/styleCover.css
+++ b/public/styles/styleCover.css
@@ -1,10 +1,22 @@
+
+.divContentAllCover{
+  margin-top: -3%;
+  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 85%;
+  /* height:100% ; */
+}
 .divContentCovers{
+    margin-top: 5%;
     display: flex;
     padding: 3%;
-    width: 75%;
+    width: 100%;
     margin-left: 2%;
     margin-bottom: 4%;
-    height: 75%;
+    height: 70vh;
     background-color: rgb(44, 43, 43);
     flex-wrap: wrap;
     overflow-y: scroll;
@@ -18,12 +30,28 @@
     background-color: #1c1c1d;
     border-radius: 20px;     
   }
-.divItemCover{
-    width: 49%;
-    height: 60%;
+  .divCoverUserVideo{
+    border-radius: 5px;
+    padding: 2%;
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    height: 55%;
+    background-color: rgba(22, 22, 22, 0.251);
+    margin-bottom: 2%;
+  }
+
+  .divCoverUserVideo h2{
+   margin: 0;
+   padding: 0;
+   color: rgb(216, 216, 216);
+   margin-bottom: 3%;
+  }
+ .divItemCover{
+    width: 100%;
+    height: 100%;
     border-radius: 20px;
     background-color: red;
-    
 }
 
 .iframe{
@@ -33,3 +61,36 @@
     border: none;
 }
 
+.divsubmitCover{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -2%;
+  height: 12vh;
+  width: 100%;
+  /* background-color: red; */
+} 
+
+.myLink{
+  font-size: 1.6rem;
+  padding: 0.5% 1%;
+  margin-right: 4%;
+  outline: none;
+  color: rgb(128, 128, 128);
+  background-color: transparent;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgb(128, 128, 128);
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: rgb(128, 128, 128);
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: rgb(128, 128, 128);
+}
