--- a/public/styles/styleCover.css
+++ b/public/styles/styleCover.css
@@ -1,5 +1,4 @@
-
-.divContentAllCover{
+.divContentAllCover {
   margin-top: -3%;
   margin-left: 5%;
   display: flex;
@@ -9,59 +8,63 @@
   width: 85%;
   /* height:100% ; */
 }
-.divContentCovers{
-    margin-top: 5%;
-    display: flex;
-    padding: 3%;
-    width: 100%;
-    margin-left: 2%;
-    margin-bottom: 4%;
-    height: 70vh;
-    background-color: rgb(44, 43, 43);
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    gap: 2%;
+
+.divContentCovers {
+  margin-top: 5%;
+  display: flex;
+  padding: 3%;
+  width: 100%;
+  margin-left: 2%;
+  margin-bottom: 4%;
+  height: 70vh;
+  background-color: rgb(44, 43, 43);
+  flex-wrap: wrap;
+  overflow-y: scroll;
+  gap: 2%;
 }
+
 .divContentCovers::-webkit-scrollbar {
-    width: 12px;       
-  }
-  
-  .divContentCovers::-webkit-scrollbar-thumb {
-    background-color: #1c1c1d;
-    border-radius: 20px;     
-  }
-  .divCoverUserVideo{
-    border-radius: 5px;
-    padding: 2%;
-    display: flex;
-    flex-direction: column;
-    width: 45%;
-    height: 55%;
-    background-color: rgba(22, 22, 22, 0.251);
-    margin-bottom: 2%;
-  }
-
-  .divCoverUserVideo h2{
-   margin: 0;
-   padding: 0;
-   color: rgb(216, 216, 216);
-   margin-bottom: 3%;
-  }
- .divItemCover{
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-    background-color: red;
+  width: 12px;
 }
 
-.iframe{
-    width: 101%;
-    height: 101%;
-    border-radius: 20px;
-    border: none;
+.divContentCovers::-webkit-scrollbar-thumb {
+  background-color: #1c1c1d;
+  border-radius: 20px;
 }
 
-.divsubmitCover{
+.divCoverUserVideo {
+  border-radius: 5px;
+  padding: 2%;
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  height: 55%;
+  background-color: rgba(22, 22, 22, 0.251);
+  margin-bottom: 2%;
+}
+
+.divCoverUserVideo h2 {
+  margin: 0;
+  padding: 0;
+  color: rgb(216, 216, 216);
+  margin-bottom: 3%;
+}
+
+.divItemCover {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background-color: red;
+}
+
+.iframe {
+  width: 101%;
+  height: 101%;
+  border-radius: 20px;
+  border: none;
+}
+
+.divsubmitCover {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,9 +72,9 @@
   height: 12vh;
   width: 100%;
   /* background-color: red; */
-} 
+}
 
-.myLink{
+.myLink {
   font-size: 1.6rem;
   padding: 0.5% 1%;
   margin-right: 4%;
@@ -82,28 +85,34 @@
   border-radius: 4px;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: rgb(128, 128, 128);
-  opacity: 1; /* Firefox */
+  opacity: 1;
+  /* Firefox */
 }
 
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
   color: rgb(128, 128, 128);
 }
 
-::-ms-input-placeholder { /* Microsoft Edge */
+::-ms-input-placeholder {
+  /* Microsoft Edge */
   color: rgb(128, 128, 128);
 }
 
-.FormCover{
+.FormCover {
   display: flex;
 }
-.FormCover input{
+
+.FormCover input {
   padding: 2%;
 }
-.buttonCover{
+
+.buttonCover {
   background-color: transparent;
-  border-radius:300px;
+  border-radius: 300px;
   padding: 4% 4.5%;
   color: rgb(20, 20, 20);
   border: 2px solid rgb(20, 20, 20);
@@ -115,11 +124,11 @@
   justify-content: center;
 }
 
-.buttonCover:hover{
+.buttonCover:hover {
   /* transform: scale(106%); */
   font-size: 1.1rem;
   background-color: rgb(20, 20, 20);
-  border-radius:300px;
+  border-radius: 300px;
   color: rgb(48, 46, 46);
   padding: 4% 4.5%;
   border: 2px solid rgb(20, 20, 20);
