--- a/public/styles/styleDash.css
+++ b/public/styles/styleDash.css
@@ -1,8 +1,8 @@
-body{
+body {
     display: flex;
 }
 
-.divMain{
+.divMain {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,19 +11,20 @@ body{
     /* background-color: rebeccapurple; */
 }
 
-.divContentMain{
-    width:90%;
+.divContentMain {
+    width: 90%;
     height: 90%;
     /* background-color: green; */
 }
 
-.itensUser{
+.itensUser {
     display: flex;
     width: 90%;
     justify-content: flex-start;
     align-items: center;
 }
-.divUserDash{
+
+.divUserDash {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -32,31 +33,31 @@ body{
     /* background-color: red; */
 }
 
-.userIMGDash{
+.userIMGDash {
     margin-left: 10%;
     margin-right: 3%;
     width: 7%;
     height: 5%;
 }
 
-.nameUser{
+.nameUser {
     font-size: 1.5rem;
     color: rgb(206, 213, 213);
 }
 
-.leaveDoor{
+.leaveDoor {
     width: 4%;
     cursor: pointer;
 }
 
 
-.divBannerDash{
+.divBannerDash {
     display: flex;
     width: 100%;
     height: 25%;
 }
 
-.divImgBanner{
+.divImgBanner {
     width: 68%;
     height: 100%;
     background-image: url(../assets/imgsDash/guitarBanner.jpg);
@@ -70,19 +71,22 @@ body{
     color: white;
     margin-right: 3%;
 }
-.divImgBanner h2{
+
+.divImgBanner h2 {
     margin: 0;
     margin-top: 4%;
     margin-left: 6%;
     margin-bottom: 2%;
 }
-.divImgBanner p{
+
+.divImgBanner p {
     margin: 0;
     margin-left: 6%;
     margin-bottom: 5%;
     width: 50%;
 }
-.divImgBanner .btnBanner{
+
+.divImgBanner .btnBanner {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -96,17 +100,17 @@ body{
     transition: 500ms;
 }
 
-.btnBanner img{
+.btnBanner img {
     width: 40%;
     height: 30%;
 }
 
-.divImgBanner .btnBanner:hover{
+.divImgBanner .btnBanner:hover {
     background-color: rgb(198, 198, 198);
-    transform: scale(1.1,1.1);
+    transform: scale(1.1, 1.1);
 }
 
-.divGoCommunity{
+.divGoCommunity {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -123,15 +127,16 @@ body{
     color: rgb(76, 4, 4);
 }
 
-.divContentGoCommunity{
+.divContentGoCommunity {
     display: flex;
     justify-content: center;
-    align-items:center ;
+    align-items: center;
     width: 80%;
     height: 50%;
     font-size: 0.7rem;
 }
-.btnGoCommunity{
+
+.btnGoCommunity {
     border-radius: 30px;
     height: 48%;
     width: 35%;
@@ -139,61 +144,64 @@ body{
     cursor: pointer;
     transition: 500ms;
 }
-.btnGoCommunity:hover{
+
+.btnGoCommunity:hover {
     background-color: rgb(198, 198, 198);
-    transform: scale(1.05,1.05);
-}
-.divDashBoard{
-    width: 70%;
-    height:40% ;
-    
+    transform: scale(1.05, 1.05);
 }
 
-.instrumentsPreferred{
+.divDashBoard {
+    width: 70%;
+    height: 40%;
+
+}
+
+.instrumentsPreferred {
     background-color: rgb(50, 50, 51);
     padding: 0% 2%;
     height: 45%;
     border-radius: 10px;
 }
 
-.instrumentsPreferred h2{
+.instrumentsPreferred h2 {
     margin-top: 10%;
     color: rgb(252, 252, 252);
     font-size: 1.8rem;
     font-weight: 600;
 }
 
-.instrumentsPreferred span{
+.instrumentsPreferred span {
     margin-top: 10%;
     font-size: 1.5rem;
     font-weight: 300;
 }
 
-.divMyDash{
+.divMyDash {
     width: 100%;
     height: 90%;
 }
 
-.usersRegistered{
+.usersRegistered {
     background-color: rgb(50, 50, 51);
     padding: 0% 2%;
     height: 45%;
     border-radius: 10px;
 }
-.usersRegistered h2{
+
+.usersRegistered h2 {
     margin-top: 10%;
     color: rgb(252, 252, 252);
     font-size: 1.8rem;
     font-weight: 600;
 }
 
-.usersRegistered span{
+.usersRegistered span {
     margin-top: 10%;
     font-size: 1.5rem;
     font-weight: 300;
 }
 
-.divRight{
+.divRight {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -205,25 +213,25 @@ body{
     height: 130vh;
 }
 
-.ItensCardRight{
+.ItensCardRight {
     padding: 3%;
     border-radius: 30px;
     width: 70%;
     height: 25%;
     background-color: rgb(23, 23, 23);
-    
+
 }
 
-.ItensCardRight h3{
+.ItensCardRight h3 {
     color: white;
     font-size: 1.3rem;
 }
 
-.ItensCardRight p{
+.ItensCardRight p {
     color: white;
 }
 
-.btnCourses{
-    width:18%;
-    height:25%
+.btnCourses {
+    width: 18%;
+    height: 25%
 }
